--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <div class="nav">
-    <h1 style="text-align: center;">Jar Jar Binks Translator</h1>
+    <h1 style="text-align: center;">Star Wars Translator</h1>
 </div>
 
 <body>
